# Farseer

./: .gitignore  .gitmodules  AeroTech_F27R_L.eng  AeroTech_I600R.eng  CMakeLists.txt  Cesaroni_282H399-12A.eng  README.md  main.cpp  runAndPlot.bat
.VSCodeCounter/2023-10-23_23-50-36/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
lib/: CMakeLists.txt
python stuff/: .env  main.py  projectile_motion.py  requirements.txt  times.py
python stuff/plotting/: far_ork_plots.py  plotting.py
python stuff/utils/: utils.py
results/: 0  1
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/eigen_test/: CMakeLists.txt  main.cpp
src/geometry/: CMakeLists.txt  matrix3.hpp  point.cpp  point.hpp
src/rocket/: CMakeLists.txt  component.hpp  finish.cpp  finish.hpp  launchConditions.hpp  main.cpp  rocket.cpp  rocket.hpp  stage.hpp
src/rocket/components/: CMakeLists.txt  aeroComponent.cpp  aeroComponent.hpp  aerodynamicCalculator.cpp  aerodynamicCalculator.hpp  bodyComponent.cpp  bodyComponent.hpp  bodyTube.cpp  bodyTube.hpp  component.cpp  component.hpp  externalComponent.cpp  externalComponent.hpp  factory.cpp  finish.hpp  internalComponent.cpp  internalComponent.hpp  kinematicCalculator.cpp  kinematicCalculator.hpp  massComponent.hpp  material.hpp  rocket.cpp  rocket.hpp  shapedInternalComponent.hpp  stage.cpp  stage.hpp  temp.cpp  temp.hpp
src/rocket/components/base/: CMakeLists.txt  aerodynamicCalculator.hpp  component.hpp  kinematicCalculator.hpp
src/rocket/components/bodyTube/: CMakeLists.txt  aeroCalc.cpp  bodyTube.cpp  bodyTube.hpp  hollowCylinder.cpp  hollowCylinder.hpp  kinCalc.cpp
src/rocket/components/fins/: CMakeLists.txt  fin.cpp  fin.hpp  finSet.cpp  finSet.hpp
src/rocket/components/motor/: CMakeLists.txt  motor.cpp  motor.hpp
src/rocket/components/nosecone/: CMakeLists.txt  nosecone.cpp  nosecone.hpp  noseconeData.cpp  noseconeData.hpp
src/rocket/components/propertyCalculator/: CMakeLists.txt  propertyCalculator.cpp  propertyCalculator.hpp
src/rocket/misc/: CMakeLists.txt  finish.cpp  finish.hpp  launchConditions.hpp  material.cpp  material.hpp  withOverride.cpp  withOverride.hpp
src/rocket/shapes/: CMakeLists.txt  aeroShape.cpp  aeroShape.hpp  aeroShapeInterface.hpp  axisymmetricShape.cpp  axisymmetricShape.hpp  bodyComponentShape.hpp  cylinder.cpp  cylinder.hpp  externalComponentShape.hpp  hollowAxisymmetricShape.hpp  hollowShape.hpp  internalComponentShape.hpp  shape.cpp  shape.hpp
src/rocket/shapes/bodyTube/: bodyTube.cpp  bodyTube.hpp
src/rocket/shapes/components/: CMakeLists.txt  aeroComponentShape.cpp  aeroComponentShape.hpp  bodyComponentShape.hpp  componentShape.cpp  componentShape.hpp  externalComponentShape.hpp  internalComponentShape.hpp
src/rocket/shapes/components/bodyTube/: CMakeLists.txt  bodyTube.cpp  bodyTube.hpp
src/rocket/shapes/components/fins/: CMakeLists.txt  fin.hpp  trapezoidalFin.cpp  trapezoidalFin.hpp
src/rocket/shapes/components/nosecone/: CMakeLists.txt  nosecone.cpp  nosecone.hpp
src/rocket/shapes/nosecone/: CMakeLists.txt  explicitNosecone.hpp  explicitNoseconeShape.hpp  haackNoseconeShape.cpp  haackNoseconeShape.hpp  nosecone.hpp  noseconeShape.cpp  noseconeShape.hpp  numericalNosecone.hpp  numericalNoseconeShape.cpp  numericalNoseconeShape.hpp
src/rocket/shapes/primitives/: CMakeLists.txt  aeroShapeFunctions.hpp  axisymmetricShape.cpp  axisymmetricShape.hpp  cylinder.cpp  cylinder.hpp  hollowAxisymmetricShape.hpp  hollowShape.cpp  hollowShape.hpp  shape.cpp  shape.hpp  trapezoidalPrism.cpp  trapezoidalPrism.hpp
src/rocket/shapes/primitives/nosecone/: CMakeLists.txt  explicitNoseconeShape.hpp  noseconeShape.cpp  noseconeShape.hpp  noseconeShapeTypes.cpp  noseconeShapeTypes.hpp  numericalNoseconeShape.cpp  numericalNoseconeShape.hpp
src/sim/: CMakeLists.txt  RealAtmos.cpp  RealAtmos.hpp  integrator.hpp  maths.cpp  maths.hpp  nanValues.hpp  rocketInterface.hpp  simulation.cpp  simulation.hpp  stateArray.cpp  stateArray.hpp
src/test_includes/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  maths.cpp  maths.hpp  nanValues.hpp  overrideFlags.hpp  parallelAxis.cpp  parallelAxis.hpp
