add_subdirectory(bodyTube)

target_sources(rocket
    PRIVATE
        rocket.cpp
        rocket.hpp
        stage.cpp
        stage.hpp
        component.cpp
        component.hpp
        internalComponent.cpp
        internalComponent.hpp
        aeroComponent.cpp
        aeroComponent.hpp
        externalComponent.cpp
        externalComponent.hpp
        bodyComponent.cpp
        bodyComponent.hpp
)
