target_sources(rocket
    PRIVATE
        shape.hpp
        shape.cpp
        axisymmetricShape.hpp
        axisymmetricShape.cpp
        aeroShapeInterface.hpp
        aeroShape.hpp
        hollowShape.hpp
        hollowShape.cpp
        bodyComponentShape.hpp
        externalComponentShape.hpp
        internalComponentShape.hpp
        cylinder.hpp
        cylinder.cpp
)
add_subdirectory(bodyTube)
add_subdirectory(nosecone)